--- a/package.json
+++ b/package.json
@@ -3,9 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.7",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-responsive": "^8.0.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.14.1",
+    "qs": "^6.9.4",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-responsive": "^8.1.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +37,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/history": "^4.7.7",
+    "@types/react-router-dom": "^5.1.5"
+  }
 }
