--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^4.4.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
